--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -158,7 +158,7 @@ h1.logo {
 
 .index-image {
     height: 400px;
-    background: url(../images/index-image.jpg)
+    background: url(/images/index-image.jpg)
                 center center no-repeat;
                 background-size: cover;
                 /* 100% 100% 圖片會拉長 */
